<resources>
    <string name="app_name">NewsApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="text_date">9 feb,2021</string>
    <string name="image_view">image view</string>
    <string name="text_login">text login</string>
    <string name="text_image_view">image view</string>
    <string name="text_login_button">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="text_ins_signup">Please fill the input below here</string>
    <string name="back">Back</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="text_already">Already have an account?</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="logout">Logout</string>
    <string name="breaking_news">Breaking News</string>
    <string name="highlight">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="achivaa">Achivaa</string>
    <string name="date">9 feb, 2021</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="aivyraa_shela">Aivyraa shela</string>
    <string name="all">All</string>
    <string name="dummy_duration">10 Min Read</string>
    <string name="international">International</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="tittle_item">An Illinois town fights to save its power plant</string>
    <string name="tv_title_detail">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="author_name">nathania slavi</string>
    <string name="desc_detail_first">Sriwijaya Air flight SJ182 was a domestic flight from Jakarta Soekarno–Hatta International Airport (CGK) to Pontianak Supadio International Airport (PNK). It was operated by a 26-year old Boeing 737-500 registered PK-CLC. This aircraft has been with the airline since 2012, having previously flown for US carriers Continental and United.</string>
    <string name="desc_detail_sec">Primis Player Placeholder A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing.</string>
    <string name="desc_detail_third">The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="content_desc">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="date_news_item">18/02/2021</string>
</resources>