<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:id="@+id/iv_singin_ilus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/text_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sign_in_ilus" />

    <TextView
        android:id="@+id/tv_tittle_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="@dimen/_30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_singin_ilus" />

    <TextView
        android:id="@+id/tv_sub_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/please_sign_in_to_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/background_button"
        android:text="@string/text_login_button"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_layout" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
        app:layout_constraintStart_toStartOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

    <TextView
        android:id="@+id/tv_qa_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_qa_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_qa_account"
        app:layout_constraintTop_toTopOf="@+id/tv_qa_account" />


</androidx.constraintlayout.widget.ConstraintLayout>