<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:id="@+id/tv_tittle_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="@dimen/_40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/please_fill_the_input_below_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_signup" />

    <ImageButton
        android:id="@+id/ib_back_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:background="@color/white"
        android:contentDescription="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_signup"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="Full name"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_confirm_pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@color/mainTrasparent"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pass_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>